# rust-example

./: .gitignore  Cargo.toml  script  test-issue
.github/workflows/: assignee_to_reviewer.yml  main.yml  releases.yml
actions/issue-doctor/: Dockerfile  action.yml  entrypoint.sh
src/: lib.rs  main.rs
