[package]
name = "lionel-says-hello"
description = "Crate for testing"
license = "MIT"
homepage = "https://github.com/lionel1704/gh-actions-demo"
repository = "https://github.com/lionel1704/gh-actions-demo"
version = "0.1.1"
authors = ["Lionel Faber <lionel1704@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "~1.8.0", features = ["macros", "time", "rt-multi-thread"] }
futures = "~0.3.15"
